@@ -1,5 +1,5 @@
 #
-#   Copyright 2007-2009 The OpenMx Project
+#   Copyright 2007-2010 The OpenMx Project
 #
 #   Licensed under the Apache License, Version 2.0 (the "License");
 #   you may not use this file except in compliance with the License.
@@ -115,7 +115,7 @@ convertThresholdMatrix <- function(flatModel, dataName, threshName) {
 		stop(paste("The observed data matrix for model", 
 			omxQuotes(modelName), "does not contain column names"), call. = FALSE)
 	}
-	threshNames <- dimnames(observed)[[2]]
+	threshNames <- dimnames(thresholds)[[2]]
 	obsNames <- dimnames(observed)[[2]]
 	missingNames <- setdiff(threshNames, obsNames)
 	if (length(missingNames) > 0) {
